--- a/framework7-react/www/index.html
+++ b/framework7-react/www/index.html
@@ -31,10 +31,7 @@
       </div>
     </div>
     <div class="pages navbar-through toolbar-through">
-      <div data-page="index" class="page">
-        <div class="page-content" id="react-content">
-        </div>
-      </div>
+      <div id="index-page" data-page="index" class="page"></div>
     </div>
   </div>
 </div>
