Wired up the geolocation page

--- a/framework7-react/www/index.html
+++ b/framework7-react/www/index.html
@@ -30,6 +30,13 @@
         </div>
         <div class="center sliding">Framework7 React</div>
       </div>
+      <!-- Geo navbar -->
+      <div class="navbar-inner cached" data-page="geo">
+        <div class="left">
+          <a href="#index" class="back link"><i class="icon icon-back"></i><span>Back</span></a>
+        </div>
+        <div class="center">Geolocation</div>
+      </div>
       <!-- Speech navbar -->
       <div class="navbar-inner cached" data-page="speech">
         <div class="left">
@@ -40,6 +47,7 @@
     </div>
     <div class="pages navbar-through toolbar-through">
       <div id="index-page" data-page="index" class="page"></div>
+      <div id="geo-page" data-page="geo" class="page cached"></div>
       <div id="speech-page" data-page="speech" class="page cached"></div>
     </div>
   </div>
