--- a/framework7-react/www/index.html
+++ b/framework7-react/www/index.html
@@ -53,8 +53,7 @@
   </div>
 </div>
 
-
-<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/mobile.js"></script>
 <script type="text/javascript" src="js/framework7.min.js"></script>
 <script type="text/javascript" src="js/bundle.js"></script>
 </body>
