Change the names of IDs so that it's clear which elements are rendered to by React

--- a/framework7-react/www/index.html
+++ b/framework7-react/www/index.html
@@ -46,9 +46,9 @@
       </div>
     </div>
     <div class="pages navbar-through toolbar-through">
-      <div id="index-page" data-page="index" class="page"></div>
-      <div id="geo-page" data-page="geo" class="page cached"></div>
-      <div id="speech-page" data-page="speech" class="page cached"></div>
+      <div id="react-index" data-page="index" class="page"></div>
+      <div id="react-geo" data-page="geo" class="page cached"></div>
+      <div id="react-speech" data-page="speech" class="page cached"></div>
     </div>
   </div>
 </div>
